[gd_scene load_steps=17 format=3 uid="uid://bm3fnga38jpgw"]

[ext_resource type="Script" path="res://player/player.gd" id="1_uooiq"]
[ext_resource type="ArrayMesh" uid="uid://xy702iir7ips" path="res://player/mesh.tres" id="2_8ynt8"]
[ext_resource type="FontFile" uid="uid://bv4vvvkt08xva" path="res://UI/IBMPlexMono-Light.ttf" id="3_6dbmm"]

[sub_resource type="SphereShape3D" id="SphereShape3D_se6ai"]
radius = 0.45

[sub_resource type="BoxShape3D" id="BoxShape3D_o6od3"]
size = Vector3(2, 2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_q3m6n"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5nxne"]
transparency = 1
shading_mode = 0
albedo_color = Color(0, 0.74902, 1, 0.282353)

[sub_resource type="CylinderMesh" id="CylinderMesh_5aryq"]
top_radius = 3.0
bottom_radius = 3.0
height = 0.05

[sub_resource type="CylinderShape3D" id="CylinderShape3D_wanpj"]
height = 0.05
radius = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dnalc"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 0, 0, 0.282353)

[sub_resource type="SphereShape3D" id="SphereShape3D_bdcey"]
radius = 0.2

[sub_resource type="CylinderShape3D" id="CylinderShape3D_r1mik"]
height = 0.1
radius = 0.45

[sub_resource type="Animation" id="Animation_sju1f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("detail:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("detail2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_d3idw"]
resource_name = "death"
length = 3.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("detail:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("detail2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ofgs"]
_data = {
"RESET": SubResource("Animation_sju1f"),
"death": SubResource("Animation_d3idw")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_m7m7t"]
radius = 20.0

[node name="Player" type="RigidBody3D" groups=["player"]]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
mass = 10.0
center_of_mass_mode = 1
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_uooiq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_se6ai")

[node name="hand" type="Marker3D" parent="CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-08, 0.5, 0, -0.5, -2.18557e-08, 0, 0, 0)
mesh = ExtResource("2_8ynt8")
skeleton = NodePath("../..")

[node name="Area3D" type="Area3D" parent="."]
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_o6od3")

[node name="boxcollision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_q3m6n")

[node name="buildradius" type="Area3D" parent="."]
visible = false
input_ray_pickable = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="buildradius"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.45, 0)
material_override = SubResource("StandardMaterial3D_5nxne")
mesh = SubResource("CylinderMesh_5aryq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="buildradius"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.45, 0)
shape = SubResource("CylinderShape3D_wanpj")

[node name="removeradius" type="Area3D" parent="."]
visible = false
input_ray_pickable = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="removeradius"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.45, 0)
material_override = SubResource("StandardMaterial3D_dnalc")
mesh = SubResource("CylinderMesh_5aryq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="removeradius"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.45, 0)
shape = SubResource("CylinderShape3D_wanpj")

[node name="deathradius" type="Area3D" parent="."]
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="deathradius"]
shape = SubResource("SphereShape3D_bdcey")

[node name="confirmation" type="Timer" parent="deathradius"]
wait_time = 0.1
one_shot = true

[node name="floor" type="ShapeCast3D" parent="."]
shape = SubResource("CylinderShape3D_r1mik")
target_position = Vector3(0, -0.5, 0)

[node name="death" type="Control" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="death"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="title" type="RichTextLabel" parent="death"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -259.0
offset_top = -20.5
offset_right = 259.0
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_6dbmm")
theme_override_font_sizes/normal_font_size = 27
bbcode_enabled = true
text = "[center]you died."

[node name="detail" type="RichTextLabel" parent="death"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -456.0
offset_top = 36.0
offset_right = 464.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_6dbmm")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center]stay safe by not going near active machines, thank you!"

[node name="detail2" type="RichTextLabel" parent="death"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -456.0
offset_top = 76.0
offset_right = 464.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_6dbmm")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center]press R to restart"

[node name="AnimationPlayer" type="AnimationPlayer" parent="death"]
libraries = {
"": SubResource("AnimationLibrary_4ofgs")
}

[node name="boxdetection" type="Area3D" parent="."]
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="boxdetection"]
shape = SubResource("SphereShape3D_m7m7t")

[connection signal="timeout" from="deathradius/confirmation" to="." method="_on_confirmation_timeout"]
[connection signal="animation_finished" from="death/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
